# devkit-sdk

AZ3166/src/: platform.txt
AZ3166/src/cores/arduino/azure-iot-sdk-c/pnp_client/: CMakeLists.txt  readme.md
AZ3166/src/cores/arduino/azure-iot-sdk-c/pnp_client/inc/: pnp_client_common.h  pnp_device_client.h  pnp_device_client_ll.h  pnp_interface_client.h  pnp_interface_client_ll.h  readme.md
AZ3166/src/cores/arduino/azure-iot-sdk-c/pnp_client/inc/internal/: lock_thread_binding.h  lock_thread_binding_stub.h  pnp_client_core.h  pnp_interface_core.h  pnp_interface_list.h  readme.md
AZ3166/src/cores/arduino/azure-iot-sdk-c/pnp_client/src/: lock_thread_binding_impl.c  lock_thread_binding_stub.c  pnp_client_core.c  pnp_client_dll.def  pnp_device.c  pnp_device_ll.c  pnp_interface.c  pnp_interface_core.c  pnp_interface_list.c  pnp_interface_ll.c  pnp_raw_interface.c  pnp_version.c
AZ3166/src/cores/arduino/system/: SystemVersion.cpp
AZ3166/src/libraries/Sensors/src/: IoT_DevKit_HW.cpp  IoT_DevKit_HW.h
AZ3166/src/system/azure-iot-sdk-c/pnp_client/inc/: pnp_client_common.h  pnp_client_version.h  pnp_device_client.h  pnp_device_client_ll.h  pnp_interface_client.h  pnp_module_client.h  pnp_module_client_ll.h
AZ3166/src/system/azure-iot-sdk-c/pnp_client/inc/internal/: lock_thread_binding.h  lock_thread_binding_impl.h  pnp_client_core.h  pnp_interface_core.h  pnp_interface_list.h  pnp_raw_interface.h
AZ3166/src/system/azure-iot-sdk-c/provisioning_client/inc/azure_prov_client/: prov_client_const.h  prov_device_client.h  prov_device_ll_client.h
AZ3166/src/system/azure-iot-sdk-c/provisioning_client/inc/azure_prov_client/internal/: prov_transport_private.h
